{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 11,
  "lineage": "88edeef0-d2f4-af93-d78c-ed86f5498053",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e7479847904f39a",
            "arn": "arn:aws:ec2:us-east-1:622215957056:elastic-ip/eipalloc-09e7479847904f39a",
            "domain": "vpc",
            "id": "eipalloc-09e7479847904f39a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-225-182-165.compute-1.amazonaws.com",
            "public_ip": "34.225.182.165",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "my-nat-iee-eip"
            },
            "tags_all": {
              "Name": "my-nat-iee-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622215957056",
            "id": "eipalloc-09e7479847904f39a",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ieee_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622215957056:internet-gateway/igw-0115c547b83829eea",
            "id": "igw-0115c547b83829eea",
            "owner_id": "622215957056",
            "region": "us-east-1",
            "tags": {
              "Name": "my-gateway-ieee"
            },
            "tags_all": {
              "Name": "my-gateway-ieee"
            },
            "vpc_id": "vpc-07ce46bf5369fc0cc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622215957056",
            "id": "igw-0115c547b83829eea",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ieee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ieee_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e7479847904f39a",
            "association_id": "eipassoc-0e813ad8898661bd2",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d1d66dfa1aa453dd",
            "network_interface_id": "eni-0137a20473e0fc9ef",
            "private_ip": "10.0.1.219",
            "public_ip": "34.225.182.165",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cee2f63a32d9e281",
            "tags": {
              "Name": "my-nat-iee"
            },
            "tags_all": {
              "Name": "my-nat-iee"
            },
            "vpc_id": "vpc-07ce46bf5369fc0cc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622215957056",
            "id": "nat-0d1d66dfa1aa453dd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.ieee_igw",
            "aws_subnet.pub-sub-1",
            "aws_vpc.ieee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622215957056:route-table/rtb-0f2d80b9b1bac77f1",
            "id": "rtb-0f2d80b9b1bac77f1",
            "owner_id": "622215957056",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d1d66dfa1aa453dd",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-route-table-pvt"
            },
            "tags_all": {
              "Name": "my-route-table-pvt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ce46bf5369fc0cc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622215957056",
            "id": "rtb-0f2d80b9b1bac77f1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.ieee_igw",
            "aws_nat_gateway.ieee_nat",
            "aws_subnet.pub-sub-1",
            "aws_vpc.ieee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622215957056:route-table/rtb-03a3de52db095d6fc",
            "id": "rtb-03a3de52db095d6fc",
            "owner_id": "622215957056",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0115c547b83829eea",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-route-table-pub"
            },
            "tags_all": {
              "Name": "my-route-table-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ce46bf5369fc0cc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622215957056",
            "id": "rtb-03a3de52db095d6fc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.ieee_igw",
            "aws_vpc.ieee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9f2a3b504c65d8e",
            "region": "us-east-1",
            "route_table_id": "rtb-0f2d80b9b1bac77f1",
            "subnet_id": "subnet-037584d479cf92f50"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622215957056",
            "id": "rtbassoc-0c9f2a3b504c65d8e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.ieee_igw",
            "aws_nat_gateway.ieee_nat",
            "aws_route_table.private",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pvt-sub-1",
            "aws_vpc.ieee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03db6851193022f3b",
            "region": "us-east-1",
            "route_table_id": "rtb-03a3de52db095d6fc",
            "subnet_id": "subnet-0cee2f63a32d9e281"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622215957056",
            "id": "rtbassoc-03db6851193022f3b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.ieee_igw",
            "aws_route_table.public",
            "aws_subnet.pub-sub-1",
            "aws_vpc.ieee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622215957056:subnet/subnet-0cee2f63a32d9e281",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cee2f63a32d9e281",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "622215957056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ieee-prod-subnet-1"
            },
            "tags_all": {
              "Name": "ieee-prod-subnet-1"
            },
            "vpc_id": "vpc-07ce46bf5369fc0cc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622215957056",
            "id": "subnet-0cee2f63a32d9e281",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ieee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622215957056:subnet/subnet-037584d479cf92f50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037584d479cf92f50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "622215957056",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ieee-pvt-subnet-1"
            },
            "tags_all": {
              "Name": "ieee-pvt-subnet-1"
            },
            "vpc_id": "vpc-07ce46bf5369fc0cc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622215957056",
            "id": "subnet-037584d479cf92f50",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ieee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ieee_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:622215957056:vpc/vpc-07ce46bf5369fc0cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02edba28e98bcce1c",
            "default_route_table_id": "rtb-0071f80b94f85ac97",
            "default_security_group_id": "sg-0598d65d048aa310b",
            "dhcp_options_id": "dopt-03fe308a9122c4f52",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ce46bf5369fc0cc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0071f80b94f85ac97",
            "owner_id": "622215957056",
            "region": "us-east-1",
            "tags": {
              "Name": "ieee-prod-vpc"
            },
            "tags_all": {
              "Name": "ieee-prod-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "622215957056",
            "id": "vpc-07ce46bf5369fc0cc",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}